--- a/amazon.css
+++ b/amazon.css
@@ -21,7 +21,7 @@
     
 }
 .logo{
-    background-image: url("amazon_logo.png");
+    background-image: url("./assets/amazon_logo.png");
     background-size: cover;
     height:50px;
     width:100%;
@@ -159,7 +159,7 @@ span{
 }
 
 .hero{
-    background-image: url("hero_image.jpg");
+    background-image: url("./assets/hero_image.jpg");
     background-size: cover;
    display: flex;
    align-items: flex-end;
